Trying to fix contact on about page for horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -436,6 +436,12 @@ input[type="button"] {
   width: 100%;
   height: 100%;
 }
+
+.column-two p {
+  width: 90%;
+  border: 2px solid red;
+}
+
 /******** FAQ PAGE **********/
 .faq {
   background-color: #527158;
